--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ button {
 button:active {
   background: #1565c0;
 }
-input[type="text"] {
+input[type="text"], input[type="password"] {
   width: 90%;
   padding: 10px;
   margin-top: 10px;
@@ -42,9 +42,20 @@ input[type="text"] {
     max-width: 95vw;
     padding: 10px;
   }
-  button, input[type="text"] {
+  button, input[type="text"], input[type="password"] {
     font-size: 1em;
     width: 100%;
     margin: 5px 0 0 0;
   }
+}
+.admin-section textarea {
+  font-size: 1em;
+  border-radius: 5px;
+  border: 1px solid #bbb;
+  margin-bottom: 3px;
+}
+.admin-section input[type="text"] {
+  font-size: 1em;
+  border-radius: 5px;
+  border: 1px solid #bbb;
 }
