--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ button {
 button:active {
   background: #1565c0;
 }
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="number"] {
   width: 90%;
   padding: 10px;
   margin-top: 10px;
@@ -42,7 +42,7 @@ input[type="text"], input[type="password"] {
     max-width: 95vw;
     padding: 10px;
   }
-  button, input[type="text"], input[type="password"] {
+  button, input[type="text"], input[type="password"], input[type="number"] {
     font-size: 1em;
     width: 100%;
     margin: 5px 0 0 0;
