--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
 }
 .app {
-  max-width: 400px;
+  max-width: 430px;
   margin: 40px auto;
   background: #fff;
   border-radius: 10px;
@@ -25,7 +25,7 @@ button {
 button:active {
   background: #1565c0;
 }
-input[type="text"], input[type="password"], input[type="number"] {
+input[type="text"], select, input[type="number"] {
   width: 90%;
   padding: 10px;
   margin-top: 10px;
@@ -42,20 +42,9 @@ input[type="text"], input[type="password"], input[type="number"] {
     max-width: 95vw;
     padding: 10px;
   }
-  button, input[type="text"], input[type="password"], input[type="number"] {
+  button, input[type="text"], select, input[type="number"] {
     font-size: 1em;
     width: 100%;
     margin: 5px 0 0 0;
   }
-}
-.admin-section textarea {
-  font-size: 1em;
-  border-radius: 5px;
-  border: 1px solid #bbb;
-  margin-bottom: 3px;
-}
-.admin-section input[type="text"] {
-  font-size: 1em;
-  border-radius: 5px;
-  border: 1px solid #bbb;
 }
